<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/labelProductId"
            android:layout_width="0px"
            android:layout_weight="2"
            android:layout_marginLeft="8dp"
            android:editable="false"
            android:layout_height="wrap_content"
            android:text="@string/productid_label" />

        <EditText
            android:id="@+id/editTextWorkTimeRecordId"
            android:layout_weight="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/labelArrivalTime"
            android:layout_width="0px"
            android:layout_weight="2"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
            android:text="@string/arrival_time_label" />

        <EditText
            android:id="@+id/editTextArrivalTime"
            android:layout_weight="8"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelLeaveTime"
            android:layout_width="0px"
            android:layout_marginLeft="8dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/leave_time_label" />

        <EditText
            android:id="@+id/editTextLeaveTime"
            android:layout_weight="8"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelDayOfWeek"
            android:layout_width="0px"
            android:layout_marginLeft="8dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/day_of_week_label" />

        <EditText
            android:id="@+id/editTextDayOfWeek"
            android:layout_weight="8"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/workTime"
            android:layout_width="0px"
            android:layout_marginLeft="8dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/day_of_week_label" />

        <EditText
            android:id="@+id/editTextWorkTime"
            android:layout_weight="8"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonWorkTimeRecordSave"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/productbutton_save_label" />

        <Button
            android:id="@+id/buttonWorkTimeRecordDelete"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/productbutton_delete_label" />

    </LinearLayout>

</LinearLayout>
